# SkiREIL

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  README.md  package.xml  requirements.txt  setup.py  wscript
.github/workflows/: ci.yml
config/: peg_insertion.json  peg_insertion_SO.json  peg_insertion_no_DR.json  push_task_SO.json  push_task_no_DR.json
config/priors/real_system/: obstacle_task_good_priors.json  obstacle_task_no_priors.json  obstacle_task_sim_priors.json  peg_insertion_good_priors.json  peg_insertion_no_priors.json  peg_insertion_sim_priors.json
config/priors/simulation/: obstacle_task_good_priors.json  obstacle_task_misleading_priors.json  obstacle_task_no_priors.json  obstacle_task_pareto_priors.json  obstacle_task_random.json  obstacle_task_rs_from_prior.json  peg_insertion_good_priors.json  peg_insertion_misleading_priors.json  peg_insertion_no_priors.json  peg_insertion_pareto_priors.json  peg_insertion_random.json  peg_insertion_rs_from_prior.json  push_task_good_priors.json  push_task_misleading_priors.json  push_task_no_priors.json  push_task_random.json  push_task_rs_from_prior.json
docs/: README.md  add_your_own_robot.md  architecture.md  cloning_and_compiling.md  learning_and_replaying.md  make_your_own_reward.md
include/Eigen/: binary_matrix.hpp
include/skireil/: parameters.hpp  skireil.hpp
include/skireil/controller/: discrete_motion_generator.hpp  motion_generator_configuration.hpp
include/skireil/experiments/: learning_skills.hpp  learning_skills_execution.hpp  learning_skills_policy_control.hpp  learning_skills_robots.hpp  learning_skills_scenes.hpp
include/skireil/model/: base_model.hpp  gp_model.hpp  gp_multi_model.hpp  mi_model.hpp
include/skireil/model/gp/: kernel_lf_opt.hpp
include/skireil/model/multi_gp/: multi_gp_whole_opt.hpp
include/skireil/optimizer/: hypermapper.hpp
include/skireil/policy/: skiros_policy.hpp
include/skireil/reward/: gp_reward.hpp  reward.hpp  reward_functions.hpp  reward_result.hpp
include/skireil/ros_msgs/: .info.txt
include/skireil/system/: dart_system.hpp  ode_system.hpp  system.hpp
include/skireil/utils/: cmd_args.hpp  dart_utils.hpp  folder_access.hpp  utils.hpp
launch/: robot_bringup.launch  skiros.launch  skiros_worker.launch
msg/: ParamFloat.msg  ParamInt.msg  ParamString.msg
res/: commanded_torques_multiplot.xml  execution.rviz  setup.rosinstall
res/URDF/: Readme.md  arm.urdf  box_with_hole.urdf  iiwa_left.urdf  iiwa_left.urdf.xacro  iiwa_left_cad.urdf  pexod.urdf  polyhedron.urdf  polyhedron_30cm.urdf  polyhedron_bay.urdf  robotiq_2f_85.urdf  robotiq_arg2f_85_model.xacro
res/URDF/iiwa_with_peg/: iiwa_left_cad_10mm_hr.urdf  iiwa_left_cad_15mm.urdf  iiwa_left_cad_1mm.urdf  iiwa_left_cad_20mm_hr.urdf  iiwa_left_cad_30mm_hr.urdf  iiwa_left_cad_3mm.urdf  iiwa_left_cad_45mm_hr.urdf  iiwa_left_cad_5mm.urdf  iiwa_left_cad_70mm_hr.urdf
res/evaluation_peg/: params.json  scenario.json
res/evaluation_push/: params.json  scenario.json
res/meshes/peg_and_hole/: peg_10mm_hr.stl  peg_20mm_hr.stl  peg_30mm_hr.stl  peg_45mm_hr.stl  peg_70mm_hr.stl
res/meshes/polyhedron/: polyhedron.stl  polyhedron_30cm.stl  polyhedron_bay.stl
scripts/: paths.sh
scripts/experiments/: container_entry_point.sh  create_param_config_and_pareto.py  launch_experiment_in_tmux.sh  play_param_config.sh  reset_iiwa.py  run_learning.sh
scripts/experiments/evaluation/: run_evaluation_execution.sh  run_execution.sh  run_execution_all.sh
scripts/installation/: clear_all.sh  install_deps_all.sh  install_skireil.sh
scripts/plotting/: paretos.py  plot_pareto_hm.py
scripts/utils/: inertia_meshlab_to_urdf.py  random_generator.py  random_params.py
src/: wscript
src/dart/: learning_skills.cpp  learning_skills_execution.cpp  play_learning_skills.cpp  wscript
src/learning_skills/: go_to_linear_primitive.py  go_to_linear_skill.py  learning_primitives.py  learning_skills.py  peg_insertion_primitives.py  peg_insertion_skills.py  push_skill.py  task_plan_to_json.py
src/skiros_integration/: skiros_manual_execution.py  skiros_rl_client.py  skiros_worker_manager.py
srv/: ManageSkirosWorker.srv  SkirosNextAction.srv
waf_tools/: boost.py  cartesian_impedance_controller_catkin.py  cartesian_trajectory_generator_catkin.py  corrade.py  dart.py  eigen.py  glog.py  magnum.py  magnum_integration.py  magnum_plugins.py  robot_dart.py  ros.py  sdl.py
